# bbfdm

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile.am  README  README.md  bbfdm_proposal.md  configure.ac  dmbbfcommon.c  dmbbfcommon.h  dmdiagnostics.c  dmdiagnostics.h  dmdynamicjson.c  dmdynamicjson.h  dmdynamiclibrary.c  dmdynamiclibrary.h  dmdynamicmem.c  dmdynamicmem.h  dmdynamicvendor.c  dmdynamicvendor.h  dmentry.c  dmentry.h  dmentryjson.c  dmentrylibrary.c  dmentrylibrary.h  dmmemjson.c  dmoperate.c  dmoperate.h  dmubus.c  dmubus.h  mkdocs.yml  supervisord.conf  wepkey.c  wepkey.h
bbfd/: .gitlab-ci.yml  Makefile  README.md  add_delete.c  add_delete.h  common.c  common.h  events.c  events.h  get.c  get.h  get_helper.c  get_helper.h  operate.c  operate.h  pretty_print.c  set.c  set.h  usp.c  usp.h
bbfd/src/: CMakeLists.txt  add_delete.c  add_delete.h  bbfd.c  bbfd.h  common.c  common.h  events.c  events.h  get.c  get.h  get_helper.c  get_helper.h  ipc.h  operate.c  operate.h  pretty_print.c  pretty_print.h  set.c  set.h
bbfdmd/: .gitignore  CMakeLists.txt  README.md
bbfdmd/src/: CMakeLists.txt  add_delete.c  add_delete.h  bbfdmd.c  bbfdmd.h  cli.c  cli.h  common.c  common.h  events.c  events.h  get.c  get.h  get_helper.c  get_helper.h  ipc.h  operate.c  operate.h  plugin.c  plugin.h  pretty_print.c  pretty_print.h  set.c  set.h
bbfdmd/ubus/: CMakeLists.txt  add_delete.c  bbfdmd  bbfdmd.c  bbfdmd.h  cli.c  cli.h  common.c  common.h  events.c  events.h  get.c  get.h  get_helper.c  get_helper.h  ipc.h  operate.c  operate.h  plugin.c  plugin.h  pretty_print.c  service.c  service.h  set.c  set.h
dm-service/: CMakeLists.txt  dm_service.c
docs/: .pages  activate_firmware.md  firewall.md  json_plugin_v1.md  mkdocs.yml  policy_based_routing.md
gitlab-ci/: bbfd-functional-api-test.sh  bbfd-functional-test.sh  bbfdm_services.conf  bbfdmd-functional-test.sh  core_service.conf  functional-api-test.sh  functional-test-python.sh  functional-test.sh  generate_supported_dm.sh  install-dependencies.sh  install-unified-dependencies.sh  iopsys-supervisord.conf  libbbf_ubus_api_test.sh  memory-test.sh  micro_service.conf  pipeline_setup.sh  reload_service.conf  setup.sh  shared.sh  tools-test.sh  unit-test.sh
include/: libbbf_api.h  libbbf_ubus.h
json/: generate_excel.py  generate_source_code.py  input.json  tr104.json  tr181.json
libbbf_api/: dmapi.c  dmapi.h  dmbbf.c  dmbbf.h  dmcommon.c  dmcommon.h  dmentry.c  dmentry.h  dmjson.c  dmjson.h  dmmem.c  dmmem.h  dmubus.c  dmubus.h  dmuci.c  dmuci.h
libbbf_api/src/: CMakeLists.txt  dmbbf.c  dmentry.h  dmjson.c
libbbf_api/src/include/: libbbf_api.h
libbbf_dm/: CMakeLists.txt  dmdiagnostics.c
libbbf_ubus/: Makefile.am  configure.ac  libbbf_ubus.c
libbbfdm/: CMakeLists.txt  device.c  device.h  deviceinfo.c  deviceinfo.h  dmcommon.c  dmcommon.h  dmdiagnostics.c  dmdiagnostics.h  dmlayer.c  dmlayer.h  gatewayinfo.h  lanconfigsecurity.c  lanconfigsecurity.h  schedules.c  schedules.h  security.c  security.h
libbbfdm-api/: CMakeLists.txt  dmapi.c  dmapi.h  dmbbf.c  dmbbf.h  dmcommon.c  dmcommon.h  dmentry.c  dmentry.h  dmjson.c  dmjson.h  dmmem.c  dmmem.h  dmplugin.c  dmplugin.h  dmubus.c  dmubus.h  dmuci.c  dmuci.h
libbbfdm-api/dm_plugin/: dmdynamicjson.c  dmdynamicjson.h  dmdynamiclibrary.c  dmdynamiclibrary.h  dmdynamicvendor.c
libbbfdm-api/include/: libbbf_api.h  libbbfdm_api.h
libbbfdm-api/legacy/: CMakeLists.txt  dmapi.c  dmapi.h  dmbbf.c  dmbbf.h  dmcommon.c  dmentry.c  dmentry.h  dmjson.c  dmmem.c  dmmem.h  dmplugin.c  dmplugin.h  dmubus.c  dmubus.h  dmuci.c  dmuci.h
libbbfdm-api/legacy/include/: libbbfdm_api.h
libbbfdm-api/legacy/plugin/: dotso_plugin.c  json_plugin.c
libbbfdm-api/plugin/: dotso_plugin.c  dotso_plugin.h  json_plugin.c  json_plugin.h  vendor_plugin.c  vendor_plugin.h
libbbfdm-api/scripts/: bbf.config
libbbfdm-api/version-2/: CMakeLists.txt  bbfdm_api.c  bbfdm_api.h  bbfdm_mem.c  bbfdm_mem.h  bbfdm_system.c  bbfdm_system.h  bbfdm_ubus.c  bbfdm_ubus.h  bbfdm_uci.c  bbfdm_uci.h
libbbfdm-ubus/: CMakeLists.txt  add_delete.c  add_delete.h  bbfdm-ubus.c  bbfdm-ubus.h  common.c  common.h  events.c  events.h  get.c  get.h  get_helper.c  get_helper.h  operate.c  operate.h  plugin.c  plugin.h  pretty_print.c  pretty_print.h  set.c  set.h
libbbfdm/dmtree/json/: tr104.json  tr181.json
libbbfdm/dmtree/tr104/: common.c  common.h  servicesvoiceservice.c  servicesvoiceservice.h  servicesvoiceservicecallcontrol.c  servicesvoiceservicecallcontrol.h  servicesvoiceservicecalllog.c  servicesvoiceservicecalllog.h  servicesvoiceservicecapabilities.c  servicesvoiceservicecapabilities.h  servicesvoiceservicecodecprofile.h  servicesvoiceservicedect.h  servicesvoiceservicepots.h  servicesvoiceservicereservedports.c  servicesvoiceservicereservedports.h  servicesvoiceservicesip.h  servicesvoiceservicevoipprofile.c  servicesvoiceservicevoipprofile.h
libbbfdm/dmtree/tr143/: diagnostics.c  diagnostics.h
libbbfdm/dmtree/tr181/: activeport.c  activeport.h  atm.c  atm.h  bridging.c  bridging.h  device.c  device.h  deviceinfo.c  deviceinfo.h  dhcpv4.c  dhcpv4.h  dhcpv6.c  dhcpv6.h  dns.c  dns.h  dsl.c  dsl.h  dynamicdns.c  dynamicdns.h  ethernet.c  ethernet.h  fast.c  fast.h  firewall.c  firewall.h  gatewayinfo.c  gatewayinfo.h  gre.c  gre.h  hosts.c  hosts.h  ieee1905.c  ieee1905.h  interfacestack.c  interfacestack.h  ip.c  ip.h  lanconfigsecurity.c  lanconfigsecurity.h  (+35 more)
libbbfdm/dmtree/tr471/: iplayercap.c  iplayercap.h
libbbfdm/scripts/: bbf.diag  bbf_api  download  iplayercap  ipping  nslookup  packetcapture  serverselection  traceroute  udpecho  upload
libbbfdm/scripts/bbf_diag/: ipping  nslookup  serverselection  udpecho
schemas/: dmtest.json  dmtest.md
scripts/: bbf.diag  bbf_activate_handler.sh  bbf_api  bbf_check_idle.sh  bbf_uci_api  download  download_launch  iplayercap  ipping  ipping_launch  nslookup  nslookup_launch  serverselection  serverselection_launch  traceroute  traceroute_launch  udpecho  udpecho_launch  upload  upload_launch
tools/: .gitignore  (+16 more)
(+569 files in other folders)
