MAINTAINERCLEANFILES = Makefile.in

libbbfdm_includedir = $(includedir)/libbbfdm
libbbf_api_includedir = $(includedir)/libbbf_api
libbbf_ubus_includedir = $(includedir)/libbbf_ubus

libbbfdm_tr181_includedir = $(libbbfdm_includedir)
libbbfdm_include_HEADERS = *.h
libbbf_api_include_HEADERS = libbbf_api/*.h
libbbf_ubus_include_HEADERS = include/*.h

SUBDIRS = bin
