cmake_minimum_required(VERSION 3.0)

PROJECT(libbbfdm)

OPTION(BBF_VENDOR_EXTENSION "build with vendor extension" ON)

ADD_DEFINITIONS(-Wall -Werror -D_GNU_SOURCE -DBBF_VENDOR_PREFIX="${BBF_VENDOR_PREFIX}")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I${CMAKE_SOURCE_DIR} -I${CMAKE_CURRENT_SOURCE_DIR}")
FILE(GLOB BBF_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

ADD_LIBRARY(bbfdm STATIC ${BBF_SOURCES})

TARGET_LINK_LIBRARIES(bbfdm uci ubus ubox json-c blobmsg_json m bbfdm-api ssl crypto)

INSTALL(TARGETS bbfdm
	LIBRARY DESTINATION usr/lib
)

INSTALL(DIRECTORY DESTINATION etc/bbfdm)
INSTALL(DIRECTORY DESTINATION etc/bbfdm/dmmap)
INSTALL(DIRECTORY DESTINATION usr/share/bbfdm)
INSTALL(DIRECTORY DESTINATION usr/share/bbfdm/scripts)
INSTALL(DIRECTORY DESTINATION usr/share/bbfdm/plugins)
INSTALL(DIRECTORY DESTINATION usr/share/bbfdm/micro_services)
INSTALL(DIRECTORY DESTINATION usr/libexec/rpcd)

IF(BBF_VENDOR_EXTENSION)
	INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/vendor/vendor.json
		DESTINATION usr/share/bbfdm/plugins
	)
ENDIF(BBF_VENDOR_EXTENSION)
